--- a/src/templates/prism-custom.css
+++ b/src/templates/prism-custom.css
@@ -9,7 +9,7 @@ pre[class*="language-"] {
   color: black;
   background: none;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 1em;
+  font-size: 0.9em;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -36,8 +36,7 @@ pre[class*="language-"] {
 }
 pre[class*="language-"]>code {
   position: relative;
-  border-left: 10px solid #358ccb;
-  box-shadow: -1px 0px 0px 0px #358ccb, 0px 0px 0px 1px #dfdfdf;
+  box-shadow: -1px 0px 0px 0px #dfdfdf, 0px 0px 0px 1px #dfdfdf;
   background-color: #fdfdfd;
   background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, 0.04) 50%);
   background-size: 3em 3em;
