--- a/src/templates/prism-custom.css
+++ b/src/templates/prism-custom.css
@@ -8,7 +8,7 @@ code[class*="language-"],
 pre[class*="language-"] {
   color: black;
   background: none;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   font-size: 0.9em;
   text-align: left;
   white-space: pre;
@@ -30,15 +30,18 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
   position: relative;
-  margin: .5em 0;
+  margin: 0.5em 0;
   overflow: visible;
   padding: 0;
 }
-pre[class*="language-"]>code {
+pre[class*="language-"] > code {
   position: relative;
   box-shadow: -1px 0px 0px 0px #dfdfdf, 0px 0px 0px 1px #dfdfdf;
   background-color: #fdfdfd;
-  background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, 0.04) 50%);
+  background-image: linear-gradient(
+    transparent 50%,
+    rgba(69, 142, 209, 0.04) 50%
+  );
   background-size: 3em 3em;
   background-origin: content-box;
   background-attachment: local;
@@ -65,11 +68,12 @@ pre[class*="language-"] {
 /* Inline code */
 :not(pre) > code[class*="language-"] {
   position: relative;
-  padding: .2em;
+  padding: 0.1em 0.4em;
   border-radius: 0.3em;
-  color: #c92c2c;
+  color: #374151;
   border: 1px solid rgba(0, 0, 0, 0.1);
   display: inline;
+  font-size: 0.8em;
   white-space: normal;
   overflow-wrap: break-word;
 }
@@ -79,11 +83,11 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #7D8B99;
+  color: #7d8b99;
 }
 
 .token.punctuation {
-  color: #5F6364;
+  color: #5f6364;
 }
 
 .token.property,
@@ -149,7 +153,7 @@ pre[class*="language-"] {
 }
 
 .token.namespace {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 767px) {
@@ -158,7 +162,6 @@ pre[class*="language-"] {
     bottom: 14px;
     box-shadow: none;
   }
-
 }
 
 /* Plugin styles: Line Numbers */
